# playlist-generator

./: .env.example  .gitignore  Cargo.toml  PLAYLIST_CONFIG.md  README.md  playlists-example.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  main.rs  models.rs  playlist_tests.rs
src/playlist/: config.rs  config_tests.rs  filters.rs  generator.rs  generator_backup.rs  metadata.rs  mod.rs  scoring.rs  transitions.rs  utils.rs
