[package]
name = "playlist-generator"
version = "0.1.0"
edition = "2024"
description = "A Rust application that generates playlists using the OpenSubsonic API with heuristics and metadata"
license = "MIT"
homepage = "https://github.com/cmonagle/playlist-generator-rust"
repository = "https://github.com/cmonagle/playlist-generator-rust"
documentation = "https://github.com/cmonagle/playlist-generator-rust"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
anyhow = "1.0"
md5 = "0.7.0"
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
approx = "0.5"
